- added minio functions to push changes to log file - added message handing to make interfacing with minio easier - created getMessages, putMessage and getMessageLogVersionID handlers   and created corresponding endpoints - added swagger comments to new handlers - implemented handlers in internal/handlers/api.go - restructured existing endpoints to better separate schedule and   messaging, also provides clearer structuring for future endpoints eg.   reporting and tracking
chores:
- updated docs directory
- updated go.mod & go.sum
