# docs/swagger.json
@@ -1,23 +1,121 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API for Transit IOM GTFS Schedule management.",
+        "description": "The transitIOM REST API",
         "title": "Project Mercury API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
+            "name": "Jayden Thompson",
+            "email": "admin@transitIOM.com"
         },
         "license": {
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "1.0"
+        "version": "0.1.0"
     },
     "host": "localhost:8090",
     "basePath": "/api/v1",
     "paths": {
+        "/messages/": {
+            "get": {
+                "description": "Retrieves the last 3 lines of the message log and the version ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "messages"
+                ],
+                "summary": "Get latest messages",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.GetMessagesResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Uploads a new message to the message log.",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "messages"
+                ],
+                "summary": "Upload a new message",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Message content",
+                        "name": "message",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Accepted",
+                        "schema": {
+                            "$ref": "#/definitions/api.PutMessageResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/messages/version": {
+            "get": {
+                "description": "Retrieves the version ID of the latest message log.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "messages"
+                ],
+                "summary": "Get latest message log version ID",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.GetVersionIDResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/schedule/": {
             "get": {
                 "description": "Retrieves the download URL and version ID of the latest GTFS schedule.",
@@ -132,6 +230,23 @@
                 }
             }
         },
+        "api.GetMessagesResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "messages": {
+                    "type": "string",
+                    "example": "{\"timestamp\": \"2026-1-1T00:00:00.000Z\", \"message\": \"Example message\"}"
+                },
+                "versionID": {
+                    "type": "string",
+                    "example": "5e4b7d12-542f-4ecf-8d95-7fbec7f7e806"
+                }
+            }
+        },
         "api.GetTimetableResponse": {
             "type": "object",
             "properties": {
@@ -159,6 +274,19 @@
                 "version": {
                     "type": "string",
                     "example": "20231215-143022"
+                }
+            }
+        },
+        "api.PutMessageResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 202
+                },
+                "versionID": {
+                    "type": "string",
+                    "example": "5e4b7d12-542f-4ecf-8d95-7fbec7f7e806"
                 }
             }
         },
